--- a/FinanceInfoRetriever/FinanceInfoRetriever/App.xaml
+++ b/FinanceInfoRetriever/FinanceInfoRetriever/App.xaml
@@ -2,8 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FinanceInfoRetriever"
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/MainWindow.xaml"
+             Startup="OnStartup"
+             DispatcherUnhandledException="Application_DispatcherUnhandledException"
+             SessionEnding="Application_SessionEnding"
+             Exit="Application_Exit">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
