--- a/FinanceInfoRetriever/FinanceInfoRetriever/Views/SetupPage.xaml
+++ b/FinanceInfoRetriever/FinanceInfoRetriever/Views/SetupPage.xaml
@@ -25,13 +25,17 @@
                         <EventSetter Event="Button.Click" Handler="Button_Click"/>
                     </Style>
                 </StackPanel.Resources>
+                <Button Name="buttonSave" Content="保存查询"/>
                 <Button Name="buttonStart" Content="启动查询"/>
                 <Button Name="buttonStop" Content="停止查询" IsEnabled="False"/>
             </StackPanel>
             <Separator DockPanel.Dock="Bottom"/>
-            <Grid Margin="5" DockPanel.Dock="Top" HorizontalAlignment="Center" 
-                  VerticalAlignment="Top" Background="Black">
+            <Grid Margin="50,5" DockPanel.Dock="Top" 
+                  VerticalAlignment="Top">
                 <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
@@ -39,11 +43,33 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Content="深交所" HorizontalAlignment="center"/>
-                <Label Grid.Row="0" Grid.Column="1" Content="http://irm.cninfo.com.cn" HorizontalAlignment="center"/>
-                <TextBox Grid.Row="0" Grid.Column="2" Name="textBox1" Text="Hello，你好。" VerticalAlignment="Center"/>
+                <Label Grid.Row="0" Grid.Column="0" Content="1." HorizontalAlignment="center"/>
+                <Label Grid.Row="0" Grid.Column="1" Content="互动易" HorizontalAlignment="left"/>
+                <Label Grid.Row="0" Grid.Column="2" Content="http://irm.cninfo.com.cn" HorizontalAlignment="left" MouseDown="Label_MouseDown"/>
+                <TextBox Grid.Row="0" Grid.Column="3" Name="textBoxCnInfo" Text="" VerticalAlignment="Center"/>
+                <Label Grid.Row="1" Grid.Column="0" Content="2." HorizontalAlignment="center"/>
+                <Label Grid.Row="1" Grid.Column="1" Content="上证互动" HorizontalAlignment="left"/>
+                <Label Grid.Row="1" Grid.Column="2" Content="http://sns.sseinfo.com" HorizontalAlignment="left" MouseDown="Label_MouseDown"/>
+                <TextBox Grid.Row="1" Grid.Column="3" Name="textBoxSseInfo" Text="" VerticalAlignment="Center"/>
+                <Label Grid.Row="2" Grid.Column="0" Content="3." HorizontalAlignment="center"/>
+                <Label Grid.Row="2" Grid.Column="1" Content="政府采购" HorizontalAlignment="left"/>
+                <Label Grid.Row="2" Grid.Column="2" Content="http://www.ccgp.gov.cn" HorizontalAlignment="left" MouseDown="Label_MouseDown"/>
+                <TextBox Grid.Row="2" Grid.Column="3" Name="textBoxCcgp" Text="" VerticalAlignment="Center"/>
+                <Label Grid.Row="3" Grid.Column="0" Content="4." HorizontalAlignment="center"/>
+                <Label Grid.Row="3" Grid.Column="1" Content="凤凰财经" HorizontalAlignment="left"/>
+                <Label Grid.Row="3" Grid.Column="2" Content="http://finance.ifeng.com" HorizontalAlignment="left" MouseDown="Label_MouseDown"/>
+                <TextBox Grid.Row="3" Grid.Column="3" Name="textBoxIfeng" Text="" VerticalAlignment="Center"/>
+                <Label Grid.Row="4" Grid.Column="0" Content="5." HorizontalAlignment="center"/>
+                <Label Grid.Row="4" Grid.Column="1" Content="百度" HorizontalAlignment="left"/>
+                <Label Grid.Row="4" Grid.Column="2" Content="http://www.baidu.com" HorizontalAlignment="left" MouseDown="Label_MouseDown"/>
+                <TextBox Grid.Row="4" Grid.Column="3" Name="textBoxBaidu" Text="" VerticalAlignment="Center"/>
+                <Label Grid.Row="5" Grid.Column="0" Content="6." HorizontalAlignment="center"/>
+                <Label Grid.Row="5" Grid.Column="1" Content="深圳证券交易所" HorizontalAlignment="left"/>
+                <Label Grid.Row="5" Grid.Column="2" Content="http://disclosure.szse.cn/m/drgg.htm" HorizontalAlignment="left" MouseDown="Label_MouseDown"/>
+                <TextBox Grid.Row="5" Grid.Column="3" Name="textBoxSzse" Text="" VerticalAlignment="Center"/>
             </Grid>
         </DockPanel>
 
