--- a/FinanceInfoRetriever/FinanceInfoRetriever/Views/ResultPage.xaml
+++ b/FinanceInfoRetriever/FinanceInfoRetriever/Views/ResultPage.xaml
@@ -1,10 +1,11 @@
-﻿<Page x:Class="FinanceInfoRetriever.Views.SetupPage"
+﻿<Page x:Class="FinanceInfoRetriever.Views.ResultPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:FinanceInfoRetriever.Views"
-      mc:Ignorable="d" Title="SystemConfig" Initialized="Page_Initialized">
+      mc:Ignorable="d" Initialized="Page_Initialized">
+
     <Grid Background="Beige">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -12,7 +13,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Label Content="查询设置" Grid.Row="0" HorizontalAlignment="Center"/>
+        <Label Content="查询结果" Grid.Row="0" HorizontalAlignment="Center"/>
 
         <DockPanel Grid.Row="1" Background="#FFFBFBF4">
             <StackPanel Orientation="Horizontal"
