--- a/FinanceInfoRetriever/FinanceInfoRetriever/Views/SetupPage.xaml
+++ b/FinanceInfoRetriever/FinanceInfoRetriever/Views/SetupPage.xaml
@@ -26,12 +26,10 @@
                     </Style>
                 </StackPanel.Resources>
                 <Button Name="buttonSave" Content="保存查询"/>
-                <Button Name="buttonStart" Content="启动查询"/>
-                <Button Name="buttonStop" Content="停止查询" IsEnabled="False"/>
             </StackPanel>
             <Separator DockPanel.Dock="Bottom"/>
 
-            <DataGrid Name="DataGridWebSite" Margin="5" AutoGenerateColumns="False" MouseDown="DataGridWebSite_MouseDown" >
+            <DataGrid Name="DataGridWebSite" Margin="5" AutoGenerateColumns="False" MouseDown="DataGridWebSite_MouseDown" CurrentCellChanged="DataGridWebSite_CurrentCellChanged" >
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="网站ID" Binding="{Binding Path=Id}" Width="50" IsReadOnly="True" CanUserResize="False"/>
                     <DataGridTextColumn Header="网站名称" Binding="{Binding Path=SiteName}" Width="100" IsReadOnly="True" CanUserResize="False"/>
