--- a/FinanceInfoRetriever/FinanceInfoRetriever/Views/SetupPage.xaml
+++ b/FinanceInfoRetriever/FinanceInfoRetriever/Views/SetupPage.xaml
@@ -29,7 +29,7 @@
             </StackPanel>
             <Separator DockPanel.Dock="Bottom"/>
 
-            <DataGrid Name="DataGridWebSite" Margin="5" AutoGenerateColumns="False" MouseDown="DataGridWebSite_MouseDown" CurrentCellChanged="DataGridWebSite_CurrentCellChanged" >
+            <DataGrid Name="DataGridWebSite" Margin="5" AutoGenerateColumns="False" MouseDown="DataGridWebSite_MouseDown" CurrentCellChanged="DataGridWebSite_CurrentCellChanged" CanUserAddRows="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="网站ID" Binding="{Binding Path=Id}" Width="50" IsReadOnly="True" CanUserResize="False"/>
                     <DataGridTextColumn Header="网站名称" Binding="{Binding Path=SiteName}" Width="100" IsReadOnly="True" CanUserResize="False"/>
