--- a/FIR/Views/MainWindow.xaml
+++ b/FIR/Views/MainWindow.xaml
@@ -35,6 +35,7 @@
                     </StackPanel.Resources>
                     <Expander Header="查询">
                         <StackPanel>
+                            <Button x:Name="ButtonSystemSetting" Content="系统设置" Tag="/Views/SystemSettingPage.xaml" />
                             <Button x:Name="ButtonSearchSetting" Content="查询设置" Tag="/Views/SetupPage.xaml"/>
                             <Button x:Name="ButtonSearchResult" Content="查询结果" Tag="/Views/ResultPage.xaml" />
                         </StackPanel>
